<resources>
    <string name="app_name">Juego de preguntas</string>
    <string name="app_questions">PREGUNTAS PARA RESPONDER</string>

    <string name="app_questions1">¿Cual mes tiene 28 dias?</string>
    <string name="app_questions2">¿Cual es una palabra palindroma?</string>
    <string name="app_questions3">¿Cual no es un lenguaje de progracion?</string>
    <string name="app_questions4">¿Año en el que se hundio el Titanic?</string>
    <string name="app_questions5">Forma corta de Servicio Nacional De Aprendizaje?</string>

    <string name="P1_O1"></string>
    <string name="P1_O2"></string>
    <string name="P1_O3"></string>
    <string name="P1_OC"></string>
    <string name="enero">Enero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="febrero">Febrero</string>
    <string name="oso">oso</string>
    <string name="reforestar">reforestar</string>
    <string name="matilde">matilde</string>
    <string name="abrigo">abrigo</string>
    <string name="java">Java</string>
    <string name="php">Php</string>
    <string name="html">HTML</string>
    <string name="_1912">1912</string>
    <string name="_1987">1987</string>
    <string name="_2012">2012</string>
    <string name="_1900">1900</string>
    <string name="muy_bien">Muy bien</string>
    <string name="resultados">Resultados</string>
    <string name="resultado_de_la_primera_pregunta">resultado de la primera pregunta</string>
    <string name="resultados_individuales">resultados individuales</string>
    <string name="jugar">Jugar</string>

</resources>