<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_questions"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
<ImageView
    android:layout_width="250dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:src="@drawable/img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_questions1"
       android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>


    <RadioGroup
        android:id="@+id/grupopregunta11"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/res1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/enero" />

        <RadioButton
            android:id="@+id/res2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/febrero" />

        <RadioButton
            android:id="@+id/res3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/marzo" />

        <RadioButton
            android:id="@+id/res4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/abril" />
    </RadioGroup>




</LinearLayout>