<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_questions"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
<ImageView
    android:layout_width="250dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:src="@drawable/img_2"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_questions3"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>


    <RadioGroup
        android:id="@+id/grupopregunta3"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/res13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/java" />

        <RadioButton
            android:id="@+id/res23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/php" />

        <RadioButton
            android:id="@+id/res33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Phyton" />

        <RadioButton
            android:id="@+id/res43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/html" />
    </RadioGroup>

</LinearLayout>